Bug 1710275 - Use nsIFocusManager.activeWindow to fix nsIMsgMailSession.topmostMsgWindow. r=mkmelin

Previously GetTopmostMsgWindow returns the first 3pane or messageWindow found, this patch uses nsIFocusManager to guarantee it's the topmost window.

Differential Revision: https://phabricator.services.mozilla.com/D115041

Depends on D114940